--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 @import './components/span';
 @import './components/button';
 @import './components/icon';
+@import './components/contact';
 
 @import './layout/page';
 @import './layout/header';
