--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -23,7 +23,7 @@
       font-size: 2rem;
       text-decoration: none;
       color: inherit;
-      padding: 1rem 3rem;
+      padding: 1rem 2rem;
       transition: all .3s;
       font-weight: 600;
 
@@ -41,6 +41,23 @@
         transform: translateY(1px);
       }
 
+    }
+  }
+
+  &__social {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    .icon {
+      fill: #0072b1;
+      margin-left: 3rem;
+    }
+
+    .btn {
+      padding-right: 3rem;
+      padding-left: 3rem;
+      font-size: 2.5rem;
     }
   }
 }
