added some more stylinf and resume

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -11,3 +11,4 @@ $color-grey-dark-4: rgb(90, 90, 90);
 $color-grey-dark-5: rgb(56, 56, 56);
 $color-grey-dark-6: rgb(31, 31, 31);
 
+$color-link-blue: rgb(0, 136, 255);
