--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,5 @@
+@import '../abstracts/variables';
+
 *,
 *::after,
 *::before {
@@ -20,6 +22,6 @@ body {
     &:link,
     &:visited {
         text-decoration: none;
-        color: blue;
+        color: $color-link-blue;
     }
 }
