--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -7,6 +7,8 @@
     height: 100vh;
     width: 100vw;
     transform: scale(1.2);
+    top: 0;
+    left: 8%;
   }
 
   &__content {
@@ -35,12 +37,11 @@
 
     &-left {
       flex: 0 0 50%;
-      border-right: solid 1px lightgray;
     }
 
     &-right {
       flex: 0 0 50%;
-      margin-left: 3rem;
+      margin-left: 2rem;
     }
 
     &-link {
@@ -60,12 +61,13 @@
       margin: .3rem;
       padding: .5rem;
 
-      &:last-child {
-        width: 90%;
+      &--big {
+        width: 93%;
         height: 10rem;
         font-size: 1.3rem;
         margin: .3rem;
         margin-top: .6rem;
+        padding: .5rem;
         text-align: top left;
       }
     }
