--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: .3rem .8rem;
   margin-top: 1rem;
   margin-bottom: 3rem;
   z-index: 200;
