minor style change

--- a/src/styles/layout/_page.scss
+++ b/src/styles/layout/_page.scss
@@ -1,7 +1,7 @@
 @import '../abstracts/variables';
 
 .home {
-  // margin: 1rem 1.5rem;
+  margin: 1rem 1.5rem;
   box-shadow: 0 .3rem 1rem rgba(black, .3);
   min-height: 200vh;
 }
