--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,6 +12,10 @@ html {
     // This defines what 1rem is
     font-size: 62.5%;
     scroll-behavior: smooth;
+
+    @media only screen and (max-width: $bp-phone) {
+        font-size: 35%;
+    }
 }
 
 body {
