--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -34,7 +34,7 @@
   &--quaternary {
     font-size: 2.5rem;
     font-weight: 600;
-    text-align: justify;
+    // text-align: justify;
     color: $color-grey-dark-6;
     animation: moveInBottom 2s ease;
   }
