--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -23,6 +23,10 @@
     border-radius: 2px;
     padding-bottom: 7rem;
     transition: all .3s;
+
+    @media only screen and (max-width: $bp-phone) {
+      padding: 3rem 2rem;
+    }
    
     h1 {
       text-align: center;
@@ -33,6 +37,10 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+
+      @media only screen and (max-width: $bp-phone) {
+        flex-direction: column;
+      }
     }
 
     &-left {
