--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -32,6 +32,10 @@
   padding: 4rem 3rem;
   display: flex;
 
+  @media only screen and (max-width: $bp-phone) {
+    flex-direction: column
+  }
+
   &__img {
     height: 30rem;
     width: 50rem;
@@ -121,6 +125,11 @@
     display: flex;
     justify-content: space-between;
     box-shadow: 0 .5rem 1rem rgba(black, .1);
+
+    @media only screen and (max-width: $bp-phone) {
+      display: block;
+    }
+
     &:hover {
       transform: scale(1.05);
       box-shadow: 0 .5rem 2rem rgba(black, .3);
@@ -178,16 +187,18 @@
 
 
 .resume {
-
-
-
   &__container {
     padding: 2rem;
     padding-bottom: 10rem;
+
     height: 20rem;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+
+    @media only screen and (max-width: $bp-phone) {
+      padding-bottom: 3rem;
+    }
   }
 
   &__preview {
@@ -198,6 +209,14 @@
     top: 15%;
     left: 20%;
     border-radius: 2px;
+
+    @media only screen and (max-width: $bp-phone) {
+      height: 62%;
+      width: 105%;
+      top: 50%;
+      left: 45%;
+      transform: translate(-50%, -50%)
+    }
   }
 }
 
