--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -89,17 +89,25 @@
   &__container {
     padding: 1rem 2rem;
     border-radius: 3px;
+    @media only screen and (max-width: $bp-phone) {
+      padding: 1rem 0rem;
+    }
   }
 
   &__section {
     padding: 2rem 4rem;
-
     border-radius: 3px;
+    @media only screen and (max-width: $bp-phone) {
+      padding: 2rem 0rem;
+    }
   }
 
   &__list {
     list-style: none;
     column-count: 4;
+    @media only screen and (max-width: $bp-phone) {
+      column-count: 3;
+    }
   }
 
   &__item {
